[portals] fix portal exit drops